# template_VCPKG-CMAKE-CPP

./: README.md
OPENGL3/: CMakeLists.txt  helloworld.cpp  vcpkg.json
